syntax = "proto3";

import "person.proto";

option csharp_namespace = "ApiComparisons.Shared.GRPC.Models";

package transactions.people;

// The request containing people
message PeopleRequest {    
}

// The response containing people
message PeopleResponse {
    repeated person.Person people = 1;
}
